# api/app/routes/menu/routes.js
@@ -13,10 +13,12 @@ module.exports = {
             Axios.get(`${Config.get("kitchen.scheme")}://${Config.get("kitchen.host")}/api/v1/sides`)
         ]).then(Axios.spread(function(meatResponse, sideResponse) {
             console.log("Collecting Results from the Kitchen");
-            const menu = _.merge(JSON.parse(parallelResponse.meats), JSON.parse(parallelResponse.sides));
+            console.log(meatResponse);
+            const menu = _.merge(meatResponse.data, sideResponse.data);
             return response.status(HttpStatus.OK).send(menu);
         }))
         .catch(function(error) {
+            console.log(error);
             return response.status(HttpStatus.INTERNAL_SERVER_ERROR).send("An unknown exception occurred while getting the menu")
         });
     }
