# kitchen/app/routes/sides/routes.js
@@ -11,7 +11,8 @@ module.exports = {
             const errorEntity = new ApiErrors.ErrorEntity(HttpStatus.INTERNAL_SERVER_ERROR, `Sold out of ${sideType}!`);
             return setImmediate(callback, errorEntity)
         }
-        sides--;
+        console.log("decreasing side");
+        sides[sideType].quantity--;
         return response.status(HttpStatus.CREATED).send();
     },
     list: function(request, response) {
